--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,3 @@
-Description of Project:
+Description of Project: Secure and Reliable Hardware 
+
+This project focuses on pinpointing errors, exercising the DRAM, and capturing performance data using an FPGA-based testing platform. 
